styles.css
h1,
h2,
h3 {
    font: bold "Tahoma";
}

h1 {
    font-size: 2rem;
}

h2 {
    font-size: 1.25rem;
}

h3 {
    font-size: 1rem;
}

p,
span {
    font-family: "Palatino Linotype" serif;
}

body {
    box-sizing: border-box;
    height: 100vh;
    margin: 0;
    padding: 0;
}

button {
    border: 0;
    padding: 0;

    background-color: rgba(0, 0, 0, 0);
}

.card {
    background-color: white;

    border-radius: 20px;
}

.dashboard-container {
    width: 100%;
    height: 100%;

    display: grid;
    grid-template: 1fr 5fr / 2fr 7fr;
}

.header {
    grid-column: 2;

    padding: 0 40px;

    display: grid;
    grid-template: 1fr 1fr / 6fr 1fr 2fr;
    align-items: center;
}

.user-name,
.greeting-sub,
.greeting-main {
    font-weight: bold;
}

.header-search-wrapper {
    margin-right: 30px;

    display: grid;
    grid-template-columns: 20px 1fr;
    align-items: center;
    gap: 15px;
}

.header-search-wrapper input {
    border: 0;
    border-radius: 20px;

    background-color: rgb(221, 229, 244);
    height: 25px;
}

.header-user {
    grid-column: 3;

    display: grid;
    grid-template-columns: 20px 40px 1fr;
    align-items: center;
    gap: 15px;
}

.user-name {
    justify-self: center;
}

.header-welcome {
    display: grid;
    grid-template: 1fr 1fr / 60px 1fr;
    gap: 0 15px;
}

.greeting-sub {
    align-self: end;
    font-size: 0.75rem;
}

.greeting-main {
    align-self: start;
    font-size: 1.25rem;
}

.welcome-user-icon {
    grid-row: 1 / -1;
}

.header-actions {
    grid-column: 2 / -1;

    display: grid;
    grid-template-columns: repeat(3, 1fr);

    gap: 20px;
}

.header-actions button {
    background-color: rgb(62, 109, 202);
    height: 30px;

    border-radius: 20px;
    color: white;
}

.sidebar {
    grid-row: 1 / -1;

    padding: 0 10px;
    background-color: rgb(62, 109, 202);

    display: grid;
    grid-template-rows: 1fr 5fr 3fr 3fr;
}

.nav-group,
.nav-group-settings {
    margin: 20px 0;

    display: grid;
    gap: 10px;
}

.nav-group {
    grid-template-rows: repeat(6, 1fr);
}

.nav-group-settings {
    grid-template-rows: repeat(3, 1fr);
}

.branding,
.nav-button {
    display: grid;
    grid-template-columns: 60px 1fr;
    align-items: center;
    text-align: left;
}

.sidebar h1,
.sidebar span {
    color: white;
}

.sidebar img {
    filter: invert(100%);
}

.sidebar img {
    justify-self: center;
}

.main-content {
    padding: 15px 40px 50px 0;

    background-color: rgb(221, 229, 244);

    display: grid;
    grid-template: 1fr 1fr / 5fr 2fr;
}

.projects {
    grid-row: 1 / -1;

    padding: 0 18px;

    display: grid;
    grid-template: 30px repeat(3, 1fr) / repeat(2, 1fr);
    gap: 18px;
}

.projects-header {
    grid-column: 1 / -1;
    align-self: center;
}

.projects-card {
    padding: 20px;
    border-left: 10px solid rgb(255, 191, 0);

    display: grid;
    grid-template: 4fr 1fr / 6fr 2fr 2fr;
    gap: 10px;
}

.project-text {
    grid-column: 1 / -1;
}

.project-text p {
    color: rgb(66, 71, 78);
}

.project-actions {
    grid-row: 2;
    grid-column: 2 / -1;

    display: grid;
    grid-template-columns: repeat(3, 20px);
    align-items: center;
    gap: 25px;
}

.announcements,
.trending {
    display: grid;
    grid-template-rows: 30px 1fr;
    gap: 18px;
}

.announcements-content,
.trending-content {
    padding: 10px 25px;
}

.announcements-content p {
    font-size: 0.75rem;
}



.trending {
    margin-top: 30px;
}

.announcements-content {
    display: grid;
    grid-template-rows: repeat(3, 1fr);
}

.announcement+.announcement {
    border-top: 1.5px solid rgb(221, 229, 244);
}

.trending-content {
    height: 100%;

    display: grid;
    grid-template-rows: repeat(4, 1fr);

    align-items: center;
}

.announcements-header,
.trending-header {
    align-self: center;
}

.trending-profile {
    display: grid;
    grid-template: 1fr 1fr / 40px 1fr;
    gap: 0 10px;

    text-align: left;
}

.trending-profile>img {
    grid-row: 1 / -1;
}

.trending-profile span:first-of-type {
    align-self: end;
}

.trending-profile span:last-of-type {
    align-self: start;
}

button:hover {
    opacity: 0.5;
}

button:active {
    opacity: 0.75;
}

.card:hover {
    border-left-color: rgb(66, 71, 78);
}

